--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -1,6 +1,12 @@
 <html>
-    <center><head>About me</head></center>
+    <head> 
+    <meta charset="UTF-8">
+    <title>about me</title>
+    </head>
     <body>
-
+     <body bgcolor="#F0F8FF">
+    <h1 align="center">ABOUT ME</h1>
+    <center><img src="Fai.jpg" width="400px" height="300px"></center>
+   
     </body>
 </html>
