--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -1,12 +1,169 @@
 <html>
     <head> 
     <meta charset="UTF-8">
-    <title>about me</title>
+    <title>About Me</title>
     </head>
     <body>
-     <body bgcolor="#F0F8FF">
-    <h1 align="center">ABOUT ME</h1>
-    <center><img src="Fai.jpg" width="400px" height="300px"></center>
-   
+     <body bgcolor="#FFCCCC">
+    <h1 align="center">About Me</h1>
+    <center><img src="Fai.jpg" width="400px" height="300px"></center><br>
+    <center> <b><u>ชื่อ</u></b> : นางสาวณัฐฌา โคมา <b><u>รหัสนิสิต</u></b>: 58160385</center><br>
+    <center> <b><u>ชื่อเล่น</u></b> : ฝ้าย</center><br>
+    <center> <b><u>ลักษณะนิสัย</u></b> : อารมณ์ดี เฟลนลี่ ชอบคิดมาก </center><br>
+
+    <table border="0" align="center" width="600">
+  <tr bgcolor="#FF6600">
+    <td colspan="3" align="center"><font color="white"><b>ภาคการศึกษาที่ 1/2558</b></font></td>
+  </tr>
+  <tr bgcolor="#FF9900" align="center">
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;รหัสวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;ชื่อรายวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;เกรด&nbsp;&nbsp;&nbsp;&nbsp;</td>
+  </tr>
+  <tr bgcolor="#FF9933">
+    <td align="left">302101</td>
+    <td align="left">Mathematics in Everyday Life</td>
+    <td align="left">C</td>
+  </tr>
+  <tr bgcolor="#FF9966">
+    <td align="left">309103</td>
+    <td align="left">Marine Science</td>
+    <td align="left">A</td>
+  </tr>
+  <tr bgcolor="#FF9999">
+    <td align="left">309103</td>
+    <td align="left">Chairball for Health</td>
+    <td align="left">A</td>
+  </tr>
+  <tr bgcolor="#FF99CC">
+    <td align="left">886201</td>
+    <td align="left">Programming Fundamental I</td>
+    <td align="left">D</td>
+  </tr>
+  <tr bgcolor="#FF99FF">
+    <td align="left">887100</td>
+    <td align="left">Information Technology Fundamental</td>
+    <td align="left">B</td>
+  </tr>
+  <tr bgcolor="#FFCCCC">
+    <td align="left">887110</td>
+    <td align="left">Introduction to Discrete Structures</td>
+    <td align="left">B+</td>
+  </tr>
+  <tr bgcolor="#FFCCFF">
+    <td align="left">999041</td>
+    <td align="left">English I</td>
+    <td align="left">C</td>
+  </tr>
+  <tr bgcolor="#e7e7e7">
+    <td colspan="2">GPA</td>
+    <td colspan="2" align="right">2.68</td>
+  </tr>
+  <tr bgcolor="#c7c7c7">
+    <td colspan="2">GPAX</td>
+    <td colspan="2" align="right">2.68</td>
+  </tr>
+</table>
+</article>
+</br>
+<article>
+<table border="0" align="center" width="600">
+  <tr bgcolor="#CC0000">
+    <td colspan="3" align="center"><font color="white"><b>ภาคการศึกษาที่ 2/2558</b></font></td>
+  </tr>
+  <tr bgcolor="#CC3333" align="center">
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;รหัสวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;ชื่อรายวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;เกรด&nbsp;&nbsp;&nbsp;&nbsp;</td>
+  </tr>
+  <tr bgcolor="#CC33007">
+    <td>402403</td>
+    <td>Sufficiency Economy and Social Development</td>
+    <td>B+</td>
+  </tr>
+  <tr bgcolor="#CC3366">
+    <td>885101</td>
+    <td>Information Technology in Daily Life</td>
+    <td>B</td>
+  </tr>
+  <tr bgcolor="#CC3399">
+    <td>885201</td>
+    <td>English for Informatics</td>
+    <td>B</td>
+  </tr>
+  <tr bgcolor="#CC33CC">
+    <td>886202</td>
+    <td>Programming Fundamental II</td>
+    <td>D</td>
+  </tr>
+  <tr bgcolor="#CC33CC">
+    <td>887120</td>
+    <td>Business Concepts in Information Technology</td>
+    <td>B+</td>
+  </tr>
+  <tr bgcolor="#CC33FF">
+    <td>887211</td>
+    <td>Mathematics for Information Technology</td>
+    <td>C+</td>
+  </tr>
+  <tr bgcolor="#CC33FF">
+    <td>999042</td>
+    <td>English II</td>
+    <td>C</td>
+  </tr>
+  <tr bgcolor=#e7e7e7>
+    <td colspan="2">GPA</td>
+    <td colspan="2" align="right">2.55</td>
+  </tr>
+  <tr bgcolor="#c7c7c7">
+    <td colspan="2">GPAX</td>
+    <td colspan="2" align="right">2.61</td>
+  </tr>
+</table>
+
+</article>
+<article>
+  <table align="center" border="0" width="600">
+  <tr bgcolor="#003399">
+    <td colspan="3" align="center"><font color="white"><b>หนังที่ชอบ</b></font></td>
+  </tr>
+  <tr>
+    <td align="center"><a href="https://www.9nung.com/10851/"><img class="img-thumbnail" src="1.jpg" style="width:200px;height:260px;"></td>
+    <td align="center"><a href="https://www.movie2free.com/i-fine-thank-you-love-you-%E0%B9%84%E0%B8%AD%E0%B8%9F%E0%B8%B2%E0%B8%A2-%E0%B9%81%E0%B8%95%E0%B9%8A%E0%B8%87%E0%B8%81%E0%B8%B4%E0%B9%89%E0%B8%A7-%E0%B9%80%E0%B8%A5%E0%B8%B4%E0%B8%9F%E0%B8%A2/"><img class="img-thumbnail" src="2.jpg" style="width:200px;height:260px;"></td>
+    <td align="center"><a href="https://www.newmovie-hd.com/%E0%B8%81%E0%B8%A7%E0%B8%99-%E0%B8%A1%E0%B8%B6%E0%B8%99-%E0%B9%82%E0%B8%AE-hello-stranger/"><img class="img-thumbnail" src="3.jpg" style="width:200px;height:260px;"></td>
+  </tr>
+  <tr bgcolor="#BEBEBE">
+    <td align="center"><font color="black"><B>สิ่งเล็กๆที่เรียกว่ารัก</B></font></td>
+    <td align="center"><font color="black"><B>ไอฟาย แต๊งกิ้ว เลิฟยู</B></td>
+    <td align="center"><font color="black"><B>กวน มึน โฮ</B></td>
+  </tr>
+</table>
+</article>
+
+<article>
+  <table align="center" border="0" width="600">
+  <tr bgcolor="#8BC34A">
+    <td colspan="5" align="center"><font color="white"><b>เว็บที่ใช้งานบ่อย</b></font></td>
+  </tr>
+  <tr>
+    <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="fb.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://twitter.com"><img class="img-circle" src="twitter.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.png" style="width:100px;height:100px;"></td>
+  </tr>
+  <tr bgcolor="#BEBEBE">
+    <td align="center"><font color="black"><B>YouTube</B></font></td>
+    <td align="center"><font color="black"><B>Facebook</B></font></td>
+    <td align="center"><font color="black"><B>Twitter</B></font></td>
+    <td align="center"><font color="black"><B>Google</B></font></td>
+    <td align="center"><font color="black"><B>Reg Buu</B></font></td>
+  </tr>
+</table>
+</article>
+
+
+
+
     </body>
 </html>
