--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -120,7 +120,7 @@
     <td colspan="2" align="right">2.61</td>
   </tr>
 </table>
-
+<br>
 </article>
 <article>
   <table align="center" border="0" width="600">
@@ -128,9 +128,9 @@
     <td colspan="3" align="center"><font color="white"><b>หนังที่ชอบ</b></font></td>
   </tr>
   <tr>
-    <td align="center"><a href="https://www.9nung.com/10851/"><img class="img-thumbnail" src="1.jpg" style="width:200px;height:260px;"></td>
+    <td align="center"><a href="https://www.movie2free.com/tag/%E0%B8%AA%E0%B8%B4%E0%B9%88%E0%B8%87%E0%B9%80%E0%B8%A5%E0%B9%87%E0%B8%81%E0%B9%86%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%81%E0%B8%A7%E0%B9%88%E0%B8%B2%E0%B8%A3%E0%B8%B1/"><img class="img-thumbnail" src="1.jpg" style="width:200px;height:260px;"></td>
     <td align="center"><a href="https://www.movie2free.com/i-fine-thank-you-love-you-%E0%B9%84%E0%B8%AD%E0%B8%9F%E0%B8%B2%E0%B8%A2-%E0%B9%81%E0%B8%95%E0%B9%8A%E0%B8%87%E0%B8%81%E0%B8%B4%E0%B9%89%E0%B8%A7-%E0%B9%80%E0%B8%A5%E0%B8%B4%E0%B8%9F%E0%B8%A2/"><img class="img-thumbnail" src="2.jpg" style="width:200px;height:260px;"></td>
-    <td align="center"><a href="https://www.newmovie-hd.com/%E0%B8%81%E0%B8%A7%E0%B8%99-%E0%B8%A1%E0%B8%B6%E0%B8%99-%E0%B9%82%E0%B8%AE-hello-stranger/"><img class="img-thumbnail" src="3.jpg" style="width:200px;height:260px;"></td>
+    <td align="center"><a href="https://www.movie2free.com/tag/%E0%B8%81%E0%B8%A7%E0%B8%99-%E0%B8%A1%E0%B8%B6%E0%B8%99-%E0%B9%82%E0%B8%AE/"><img class="img-thumbnail" src="3.jpg" style="width:200px;height:260px;"></td>
   </tr>
   <tr bgcolor="#BEBEBE">
     <td align="center"><font color="black"><B>สิ่งเล็กๆที่เรียกว่ารัก</B></font></td>
@@ -139,10 +139,10 @@
   </tr>
 </table>
 </article>
-
+<br>
 <article>
   <table align="center" border="0" width="600">
-  <tr bgcolor="#8BC34A">
+  <tr bgcolor="#0099FF">
     <td colspan="5" align="center"><font color="white"><b>เว็บที่ใช้งานบ่อย</b></font></td>
   </tr>
   <tr>
