--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -147,15 +147,15 @@
   </tr>
   <tr>
     <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.png" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="fb.png" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="https://twitter.com"><img class="img-circle" src="twitter.png" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.png" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="facebook.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://friefox.com"><img class="img-circle" src="firefox.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.jpg" style="width:100px;height:100px;"></td>
   </tr>
   <tr bgcolor="#BEBEBE">
     <td align="center"><font color="black"><B>YouTube</B></font></td>
     <td align="center"><font color="black"><B>Facebook</B></font></td>
-    <td align="center"><font color="black"><B>Twitter</B></font></td>
+    <td align="center"><font color="black"><B>Friefox</B></font></td>
     <td align="center"><font color="black"><B>Google</B></font></td>
     <td align="center"><font color="black"><B>Reg Buu</B></font></td>
   </tr>
