--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -132,10 +132,10 @@
     <td align="center"><a href="https://www.movie2free.com/i-fine-thank-you-love-you-%E0%B9%84%E0%B8%AD%E0%B8%9F%E0%B8%B2%E0%B8%A2-%E0%B9%81%E0%B8%95%E0%B9%8A%E0%B8%87%E0%B8%81%E0%B8%B4%E0%B9%89%E0%B8%A7-%E0%B9%80%E0%B8%A5%E0%B8%B4%E0%B8%9F%E0%B8%A2/"><img class="img-thumbnail" src="2.jpg" style="width:200px;height:260px;"></td>
     <td align="center"><a href="https://www.movie2free.com/tag/%E0%B8%81%E0%B8%A7%E0%B8%99-%E0%B8%A1%E0%B8%B6%E0%B8%99-%E0%B9%82%E0%B8%AE/"><img class="img-thumbnail" src="3.jpg" style="width:200px;height:260px;"></td>
   </tr>
-  <tr bgcolor="#BEBEBE">
-    <td align="center"><font color="black"><B>สิ่งเล็กๆที่เรียกว่ารัก</B></font></td>
-    <td align="center"><font color="black"><B>ไอฟาย แต๊งกิ้ว เลิฟยู</B></td>
-    <td align="center"><font color="black"><B>กวน มึน โฮ</B></td>
+  <tr bgcolor="#003399">
+    <td align="center"><font color="white"><B>สิ่งเล็กๆที่เรียกว่ารัก</B></font></td>
+    <td align="center"><font color="white"><B>ไอฟาย แต๊งกิ้ว เลิฟยู</B></td>
+    <td align="center"><font color="white"><B>กวน มึน โฮ</B></td>
   </tr>
 </table>
 </article>
@@ -146,24 +146,30 @@
     <td colspan="5" align="center"><font color="white"><b>เว็บที่ใช้งานบ่อย</b></font></td>
   </tr>
   <tr>
-    <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.png" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="facebook.png" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="https://friefox.com"><img class="img-circle" src="firefox.jpg" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.jpg" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.jpg" style="width:200px;height:200px;"></td>
+    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="facebook.png" style="width:200px;height:200px;"></td>
+    <td align="center"><a href="https://www.instagram.com"><img class="img-circle" src="ig.jpg" style="width:200px;height:200px;"></td>
+    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.jpg" style="width:200px;height:200px;"></td>
+    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.png" style="width:200px;height:200px;"></td>
   </tr>
-  <tr bgcolor="#BEBEBE">
-    <td align="center"><font color="black"><B>YouTube</B></font></td>
-    <td align="center"><font color="black"><B>Facebook</B></font></td>
-    <td align="center"><font color="black"><B>Friefox</B></font></td>
-    <td align="center"><font color="black"><B>Google</B></font></td>
-    <td align="center"><font color="black"><B>Reg Buu</B></font></td>
+  <tr bgcolor="#0099FF">
+    <td align="center"><font color="white"><B>YouTube</B></font></td>
+    <td align="center"><font color="white"><B>Facebook</B></font></td>
+    <td align="center"><font color="white"><B>Instagram</B></font></td>
+    <td align="center"><font color="white"><B>Google</B></font></td>
+    <td align="center"><font color="white"><B>Reg Buu</B></font></td>
   </tr>
 </table>
 </article>
 
+<article>
 
-
-
+  <tr>
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160426/887371/lab01"><img class="img-thumbnail" src="tai.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160511/887371/lab01"><img class="img-thumbnail" src="art.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160179/887371/lab01"><img class="img-thumbnail" src="aui.jpg" style="width:100px;height:100px;"></td>
+  </tr>
+</table>
+</article>
     </body>
 </html>
