--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -4,7 +4,7 @@
     <title>About Me</title>
     </head>
     <body>
-     <body bgcolor="#FFCCCC">
+     <body background="55.jpg">
     <h1 align="center">About Me</h1>
     <center><img src="Fai.jpg" width="400px" height="300px"></center><br>
     <center> <b><u>ชื่อ</u></b> : นางสาวณัฐฌา โคมา <b><u>รหัสนิสิต</u></b>: 58160385</center><br>
@@ -146,11 +146,11 @@
     <td colspan="5" align="center"><font color="white"><b>เว็บที่ใช้งานบ่อย</b></font></td>
   </tr>
   <tr>
-    <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.jpg" style="width:200px;height:200px;"></td>
-    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="facebook.png" style="width:200px;height:200px;"></td>
-    <td align="center"><a href="https://www.instagram.com"><img class="img-circle" src="ig.jpg" style="width:200px;height:200px;"></td>
-    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.jpg" style="width:200px;height:200px;"></td>
-    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.png" style="width:200px;height:200px;"></td>
+    <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="facebook.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.instagram.com"><img class="img-circle" src="ig.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.png" style="width:100px;height:100px;"></td>
   </tr>
   <tr bgcolor="#0099FF">
     <td align="center"><font color="white"><B>YouTube</B></font></td>
@@ -161,13 +161,12 @@
   </tr>
 </table>
 </article>
-
+<br>
 <article>
-
   <tr>
-    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160426/887371/lab01"><img class="img-thumbnail" src="tai.jpg" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160511/887371/lab01"><img class="img-thumbnail" src="art.jpg" style="width:100px;height:100px;"></td>
-    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160179/887371/lab01"><img class="img-thumbnail" src="aui.jpg" style="width:100px;height:100px;"></td>
+    <center><td align="center"><a href="http://angsila.cs.buu.ac.th/~58160426/887371/lab01/aboutme.html"><img class="img-thumbnail" src="tai.jpg" style="width:100px;height:100px;"></td>&nbsp
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160511/887371/lab01/aboutme.html"><img class="img-thumbnail" src="art.jpg" style="width:100px;height:100px;"></td>&nbsp
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160179/887371/lab01/aboutme.html"><img class="img-thumbnail" src="aui.jpg" style="width:100px;height:100px;"></td>&nbsp</center>
   </tr>
 </table>
 </article>
