--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -166,7 +166,8 @@
   <tr>
     <center><td align="center"><a href="http://angsila.cs.buu.ac.th/~58160426/887371/lab01/aboutme.html"><img class="img-thumbnail" src="tai.jpg" style="width:150px;height:100px;"></td>&nbsp
     <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160511/887371/lab01/aboutme.html"><img class="img-thumbnail" src="art.jpg" style="width:150px;height:100px;"></td>&nbsp
-    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160179/887371/lab01/aboutme.html"><img class="img-thumbnail" src="aui.jpg" style="width:150px;height:100px;"></td>&nbsp</center>
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160179/887371/lab01/aboutme.html"><img class="img-thumbnail" src="aui.jpg" style="width:150px;height:100px;"></td>&nbsp
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160404/887371/lab01/aboutme.html"><img class="img-thumbnail" src="fame.jpg" style="width:150px;height:100px;"></td>&nbsp</center>
   </tr>
 </table>
 </article>
