--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -146,11 +146,11 @@
     <td colspan="5" align="center"><font color="white"><b>เว็บที่ใช้งานบ่อย</b></font></td>
   </tr>
   <tr>
-    <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.jpg" style="width:100px;height:150px;"></td>
-    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="facebook.png" style="width:100px;height:150px;"></td>
-    <td align="center"><a href="https://www.instagram.com"><img class="img-circle" src="ig.jpg" style="width:100px;height:150px;"></td>
-    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.jpg" style="width:100px;height:150px;"></td>
-    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.png" style="width:100px;height:150px;"></td>
+    <td align="center"><a href="https://www.youtube.com"><img class="img-circle" src="youtube.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.facebook.com"><img class="img-circle" src="facebook.png" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.instagram.com"><img class="img-circle" src="ig.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="https://www.google.com"><img class="img-circle" src="google.jpg" style="width:100px;height:100px;"></td>
+    <td align="center"><a href="http://reg.buu.ac.th"><img class="img-circle" src="buu.png" style="width:100px;height:100px;"></td>
   </tr>
   <tr bgcolor="#0099FF">
     <td align="center"><font color="white"><B>YouTube</B></font></td>
@@ -164,10 +164,10 @@
 <br>
 <article>
   <tr>
-    <center><td align="center"><a href="http://angsila.cs.buu.ac.th/~58160426/887371/lab01/aboutme.html"><img class="img-thumbnail" src="tai.jpg" style="width:150px;height:100px;"></td>&nbsp
-    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160511/887371/lab01/aboutme.html"><img class="img-thumbnail" src="art.jpg" style="width:150px;height:100px;"></td>&nbsp
-    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160179/887371/lab01/aboutme.html"><img class="img-thumbnail" src="aui.jpg" style="width:150px;height:100px;"></td>&nbsp
-    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160404/887371/lab01/aboutme.html"><img class="img-thumbnail" src="fame.jpg" style="width:150px;height:100px;"></td>&nbsp</center>
+    <center><td align="center"><a href="http://angsila.cs.buu.ac.th/~58160426/887371/lab01/aboutme.html"><img class="img-thumbnail" src="tai.jpg" style="width:150px;height:150px;"></td>
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160511/887371/lab01/aboutme.html"><img class="img-thumbnail" src="art.jpg" style="width:150px;height:150px;"></td>
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160179/887371/lab01/aboutme.html"><img class="img-thumbnail" src="aui.jpg" style="width:150px;height:150px;"></td>
+    <td align="center"><a href="http://angsila.cs.buu.ac.th/~58160404/887371/lab01/aboutme.html"><img class="img-thumbnail" src="fame.jpg" style="width:150px;height:150px;"></td></center>
   </tr>
 </table>
 </article>
