--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -120,12 +120,68 @@
     <td colspan="2" align="right">2.61</td>
   </tr>
 </table>
+
+
 <br>
 </article>
 <article>
   <table align="center" border="0" width="600">
-  <tr bgcolor="#003399">
-    <td colspan="3" align="center"><font color="white"><b>หนังที่ชอบ</b></font></td>
+  <tr bgcolor="#003399"><article>
+<table border="0" align="center" width="600">
+  <tr bgcolor="#CC0000">
+    <td colspan="3" align="center"><font color="white"><b>ภาคการศึกษาที่ 1/2559</b></font></td>
+  </tr>
+  <tr bgcolor="#CC3333" align="center">
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;รหัสวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;ชื่อรายวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;เกรด&nbsp;&nbsp;&nbsp;&nbsp;</td>
+  </tr>
+  <tr bgcolor="#CC33007">
+    <td>423321</td>
+    <td>Design and Creative Presentation</td>
+    <td>A</td>
+  </tr>
+  <tr bgcolor="#CC3366">
+    <td>678101</td>
+    <td>Basic Knowledge of General Law</td>
+    <td>A</td>
+  </tr>
+  <tr bgcolor="#CC3399">
+    <td>886210</td>
+    <td>Data Structures and Algorithms</td>
+    <td>W</td>
+  </tr>
+  <tr bgcolor="#CC33CC">
+    <td>887130</td>
+    <td>Platform Technology</td>
+    <td>A</td>
+  </tr>
+  <tr bgcolor="#CC33CC">
+    <td>887212</td>
+    <td>Statistics for Information Technology</td>
+    <td>B+</td>
+  </tr>
+  <tr bgcolor="#CC33FF">
+    <td>887250</td>
+    <td>Database System</td>
+    <td>C+</td>
+  </tr>
+  <tr bgcolor=#e7e7e7>
+    <td colspan="2">GPA</td>
+    <td colspan="2" align="right">3.57</td>
+  </tr>
+  <tr bgcolor="#c7c7c7">
+    <td colspan="2">GPAX</td>
+    <td colspan="2" align="right">2.88</td>
+  </tr>
+</table>
+<br>
+</article>
+
+<article>
+<table align="center" border="0" width="600">
+  <tr>
+  <td colspan="3" align="center"><font color="white"><b>หนังที่ชอบ</b></font></td>
   </tr>
   <tr>
     <td align="center"><a href="https://www.movie2free.com/tag/%E0%B8%AA%E0%B8%B4%E0%B9%88%E0%B8%87%E0%B9%80%E0%B8%A5%E0%B9%87%E0%B8%81%E0%B9%86%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%81%E0%B8%A7%E0%B9%88%E0%B8%B2%E0%B8%A3%E0%B8%B1/"><img class="img-thumbnail" src="1.jpg" style="width:200px;height:260px;"></td>
