--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -5,10 +5,12 @@
     </head>
     <body>
      <body background="55.jpg">
-    <h1 align="center">About Me</h1>
+    <h1 align="center"><font color =#FF6600 > About Me </h1>
     <center><img src="Fai.jpg" width="400px" height="300px"></center><br>
     <center> <b><u>ชื่อ</u></b> : นางสาวณัฐฌา โคมา <b><u>รหัสนิสิต</u></b>: 58160385</center><br>
     <center> <b><u>ชื่อเล่น</u></b> : ฝ้าย</center><br>
+    <center> <b><u>การศึกษา</u></b> : สาขาเทคโนโลยีสารสนเทศ คณะวิทยาการสารสนเทศ มหาวิทยาลัยบูรพา</center><br>
+
     <center> <b><u>ลักษณะนิสัย</u></b> : อารมณ์ดี เฟลนลี่ ชอบคิดมาก </center><br>
 
     <table border="0" align="center" width="600">
@@ -128,40 +130,40 @@
   <table align="center" border="0" width="600">
   <tr bgcolor="#003399"><article>
 <table border="0" align="center" width="600">
-  <tr bgcolor="#CC0000">
+  <tr bgcolor="#339900">
     <td colspan="3" align="center"><font color="white"><b>ภาคการศึกษาที่ 1/2559</b></font></td>
   </tr>
-  <tr bgcolor="#CC3333" align="center">
+  <tr bgcolor="#339933" align="center">
     <td>&nbsp;&nbsp;&nbsp;&nbsp;รหัสวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;ชื่อรายวิชา&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;เกรด&nbsp;&nbsp;&nbsp;&nbsp;</td>
   </tr>
-  <tr bgcolor="#CC33007">
+  <tr bgcolor="#339966">
     <td>423321</td>
     <td>Design and Creative Presentation</td>
     <td>A</td>
   </tr>
-  <tr bgcolor="#CC3366">
+  <tr bgcolor="#339999">
     <td>678101</td>
     <td>Basic Knowledge of General Law</td>
     <td>A</td>
   </tr>
-  <tr bgcolor="#CC3399">
+  <tr bgcolor="#3399CC">
     <td>886210</td>
     <td>Data Structures and Algorithms</td>
     <td>W</td>
   </tr>
-  <tr bgcolor="#CC33CC">
+  <tr bgcolor="#3399FF">
     <td>887130</td>
     <td>Platform Technology</td>
     <td>A</td>
   </tr>
-  <tr bgcolor="#CC33CC">
+  <tr bgcolor="#33CC99">
     <td>887212</td>
     <td>Statistics for Information Technology</td>
     <td>B+</td>
   </tr>
-  <tr bgcolor="#CC33FF">
+  <tr bgcolor="#33CCCC">
     <td>887250</td>
     <td>Database System</td>
     <td>C+</td>
@@ -175,12 +177,12 @@
     <td colspan="2" align="right">2.88</td>
   </tr>
 </table>
-<br>
 </article>
+<br>
 
 <article>
-<table align="center" border="0" width="600">
-  <tr>
+ <table align="center" border="0" width="600">
+    <tr bgcolor="#003399">
   <td colspan="3" align="center"><font color="white"><b>หนังที่ชอบ</b></font></td>
   </tr>
   <tr>
@@ -196,6 +198,7 @@
 </table>
 </article>
 <br>
+
 <article>
   <table align="center" border="0" width="600">
   <tr bgcolor="#0099FF">
