--- a/lab01/project.html
+++ b/lab01/project.html
@@ -3,3 +3,20 @@ Project เว็บแนะนำฟุตบอลทีมชาติไท
 - ในฐานะที่ฉันเป็นนิสิต ฉันสามารถเข้าไปหาความรู้เกี่ยวกับฟุตบอลไทยได้ <br>
 - ในฐานะที่ฉันเป็นคนไทยคนหนึ่ง ฉันสามารถรู้ถึงประวัติฟุตบอลทีมชาติไทยมากขึ้น <br>
 
+้<html>
+    <head>
+        <title>Project</title>
+    </head>
+    <body>
+         <body background="#000066">
+             Project เว็บแนะนำฟุตบอลทีมชาติไทย <br>
+- ในฐานะที่ฉันเป็นนิสิต ฉันสามารถเข้าไปหาความรู้เกี่ยวกับฟุตบอลไทยได้ <br>
+- ในฐานะที่ฉันเป็นคนไทยคนหนึ่ง ฉันสามารถรู้ถึงประวัติฟุตบอลทีมชาติไทยมากขึ้น <br>
+     <h1 align="center"><font color =#FFFFFF><I> Thailand national football team </I></h1>
+        <td>
+            <tr>
+            </tr>
+        </td>
+    </body>
+    </html>
+
