--- a/lab01/project.html
+++ b/lab01/project.html
@@ -1,14 +1,13 @@
-
-Project เว็บแนะนำฟุตบอลทีมชาติไทย <br>
-- ในฐานะที่ฉันเป็นนิสิต ฉันสามารถเข้าไปหาความรู้เกี่ยวกับฟุตบอลไทยได้ <br>
-- ในฐานะที่ฉันเป็นคนไทยคนหนึ่ง ฉันสามารถรู้ถึงประวัติฟุตบอลทีมชาติไทยมากขึ้น<br>
-
-้<html>
+<html>
     <head>
         <title>Project</title>
     </head>
     <body>
     <body background="#000066">
+
+<h1 align="center"><font color =#FFFFFF>Project เว็บแนะนำฟุตบอลทีมชาติไทย </I></h1><br>
+<h1 align="center"><font color =#FFFFFF>- ในฐานะที่ฉันเป็นนิสิต ฉันสามารถเข้าไปหาความรู้เกี่ยวกับฟุตบอลไทยได้ </I></h1><br>
+<h1 align="center"><font color =#FFFFFF>- ในฐานะที่ฉันเป็นคนไทยคนหนึ่ง ฉันสามารถรู้ถึงประวัติฟุตบอลทีมชาติไทยมากขึ้น </I></h1><br>
      <h1 align="center"><font color =#FFFFFF><I> Thailand national football team </I></h1>
         <td>
             <tr>
