--- a/lab01/aboutme.html
+++ b/lab01/aboutme.html
@@ -28,7 +28,7 @@
 onMouseover="window.status='Click on the image to learn more about it!';return true"
 onMouseout="window.status=''">
 
-<p><img src="3.jpg" name="slide" border="0" style="filter:blendTrans(duration=3)"
+<p><img src="Fai.jpg" name="slide" border="0" style="filter:blendTrans(duration=3)"
 width="550" height="350"></a> <script>
 <!--
 ////change number of images below 
