--- a/lab01/project1_1.html
+++ b/lab01/project1_1.html
@@ -2,8 +2,17 @@
     <head>
         <title> Project </title>
     </head>
-<body background="#003366">
-    <h1 align="center"><font color =#FFFFFF><I> Thailand national football team </I></h1>
-     <center>
+<body bgcolor="#003366">
+    <h1 align="center"><font color =#FFFFFF><I> Thailand national football team </I></font></h1>
+    <center><img src="Thailand.png" width="200" height="200"></center><br>
+
+<TABLE border="0" align="center" width="1000" height="100" bgcolor="#003366">
+            <TR>
+                     <TH> <font color =#FFFFFF><I> ประวัติ </I></font></TH>
+                     <TH> <font color =#FFFFFF><I> แนะนำนักฟุตบอลทีมชาติไทย </I></font></TH>
+                     <TH> <font color =#FFFFFF><I> ผ่านงานที่ผ่านมา </I></font></TH>
+                     <TH> <font color =#FFFFFF><I> ข่าวสารต่างๆ </I></font></TH>
+             </TR>
+</TABLE> 
 </body>
 </html>
