--- a/lab01/project1_1.html
+++ b/lab01/project1_1.html
@@ -6,14 +6,26 @@
     <h1 align="center"><font color =#FFFFFF><I> Thailand national football team </I></font></h1>
     <center><img src="Thailand.png" width="200" height="200"></center><br>
 
-<TABLE border="0" align="center" width="1000" height="100" bgcolor="#003366">
-            <TR>
-                     <TH> <font color =#FFFFFF><I> ประวัติ </I></font></TH>
-                     <TH> <font color =#FFFFFF><I> แนะนำนักฟุตบอลทีมชาติไทย </I></font></TH>
-                     <TH> <font color =#FFFFFF><I> ผลงานที่ผ่านมา </I></font></TH>
-                     <TH> <font color =#FFFFFF><I> ข่าวสารต่างๆ </I></font></TH>
-             </TR>
-</TABLE>
+        <table border="0" align="center" width="600">
+        <tr bgcolor="#003366">
+            <td colspan="3" align="center">
+                <a href="http://angsila.cs.buu.ac.th/~58160385/887371/lab01/project1_2.html">
+                    <font color="#FFFFFF"><I>ประวัติ</I></font>
+            </td>
+            <td colspan="3" align="center">
+                <a href="">
+                    <font color="#FFFFFF"><I>แนะนำนักฟุตบอลทีมชาติไทย</I></font>
+            </td>
+                        <td colspan="3" align="center">
+                <a href="">
+                    <font color="#FFFFFF"><I>ผลงานที่ผ่านมา</I></font>
+            </td>
+                        <td colspan="3" align="center">
+                <a href="">
+                    <font color="#FFFFFF"><I>ข่าวสารต่างๆ</I></font>
+            </td>
+             </tr>
+        </table>
 
 <marquee ><img  src="Thai1.jpg" width="400" height="200"/>
 <img src="Thai2.jpg" width="400" height="200"/>
