--- a/lab01/project1_1.html
+++ b/lab01/project1_1.html
@@ -25,18 +25,13 @@
                     <font color="#FFFFFF"><I>ข่าวสารต่างๆ</I></font>
             </td>
              </tr>
-        </table>
+        </table><br>
 
-<marquee ><img  src="Thai1.jpg" width="400" height="200"/>
-<img src="Thai2.jpg" width="400" height="200"/>
-<img src="Thai3.jpg" width="400" height="200"/> 
-<img  src="Thai4.jpg" width="400" height="200"/>
-<img src="Thai5.jpg" width="400" height="200"/>
-<img src="Thai6.jpg" width="400" height="200"/>
-<img src="Thai7.jpg" width="400" height="200"/>
-<img src="Thai8.jpg" width="400" height="200"/>
-<img src="Thai9.jpg" width="400" height="200"/>
-<img src="Thai10.jpg" width="400" height="200"/> </marquee> 
+<marquee ><img  src="Thai1.jpg" width="400" height="200"/><img src="Thai2.jpg" width="400" height="200"/>
+<img src="Thai3.jpg" width="400" height="200"/> <img  src="Thai4.jpg" width="400" height="200"/>
+<img src="Thai5.jpg" width="400" height="200"/><img src="Thai6.jpg" width="400" height="200"/>
+<img src="Thai7.jpg" width="400" height="200"/><img src="Thai8.jpg" width="400" height="200"/>
+<img src="Thai9.jpg" width="400" height="200"/><img src="Thai10.jpg" width="400" height="200"/> </marquee> 
 
 </body>
 </html>
