--- a/lab01/project.html
+++ b/lab01/project.html
@@ -1,15 +1,20 @@
 <html>
-    <head>
-        <title>Project</title>
-    </head>
-    <body>
-    <body background="#000066">
 
-<h1 align="center"><font color =#FFFFFF>Project เว็บแนะนำฟุตบอลทีมชาติไทย </I></h1><br>
-<h1 align="center"><font color =#FFFFFF>- ในฐานะที่ฉันเป็นนิสิต ฉันสามารถเข้าไปหาความรู้เกี่ยวกับฟุตบอลไทยได้ </I></h1><br>
-<h1 align="center"><font color =#FFFFFF>- ในฐานะที่ฉันเป็นคนไทยคนหนึ่ง ฉันสามารถรู้ถึงประวัติฟุตบอลทีมชาติไทยมากขึ้น </I></h1><br>
-     <h1 align="center"><font color =#FFFFFF><I> Thailand national football team </I></h1>
-     
-    </body>
-    </html>
+<head>
+
+</head>
+
+<body>
+<body>
+    <center>
+        <FONT FACE="TH SarabunPSK" SIZE=6 ><u>Project</u></FONT>
+        <BR>
+        <FONT FACE="TH SarabunPSK" SIZE=5> ในฐานะที่ฉัน เป็นคนชอบดูฟุตบอลไทยก็อยากจะรู้จักประวัติต่างๆ ผลงานต่างๆมากขึ้น และเผลแพร่ข้อมูลต่างๆให้ทุกคนเห็น </FONT>
+        <BR>
+
+        <TABLE <TD colspan=3></TD>
+</body>
+
+</html>
+
 
