--- a/lab01/project.html
+++ b/lab01/project.html
@@ -12,6 +12,8 @@
         <FONT FACE="TH SarabunPSK" SIZE=5> ในฐานะที่ฉัน เป็นคนชอบดูฟุตบอลไทยก็อยากจะรู้จักประวัติต่างๆ ผลงานต่างๆมากขึ้น และเผลแพร่ข้อมูลต่างๆให้ทุกคนเห็น </FONT>
         <BR>
 
+        <center><img src="111.jpg" width="700" height="250"></center>
+        <center><img src="222.jpg" width="700" height="250"></center>
         <TABLE <TD colspan=3></TD>
 </body>
 
