--- a/lab01/project.html
+++ b/lab01/project.html
@@ -9,11 +9,10 @@
     <center>
         <FONT FACE="TH SarabunPSK" SIZE=6 ><u>Project</u></FONT>
         <BR>
-        <FONT FACE="TH SarabunPSK" SIZE=5> ในฐานะที่ฉัน เป็นคนชอบดูฟุตบอลไทยก็อยากจะรู้จักประวัติต่างๆ ผลงานต่างๆมากขึ้น และเผลแพร่ข้อมูลต่างๆให้ทุกคนเห็น </FONT>
-        <BR>
+        <FONT FACE="TH SarabunPSK" SIZE=5> ในฐานะที่ฉัน เป็นคนชอบดูฟุตบอลไทยก็อยากจะรู้จักประวัติต่างๆ ผลงานต่างๆมากขึ้น และเผลแพร่ข้อมูลต่างๆให้ทุกคนเห็น </FONT><br>
 
-        <center><img src="111.jpg" width="700" height="250"></center>
-        <center><img src="222.jpg" width="700" height="250"></center>
+        <center><img src="111.png" width="700" height="250"></center><br>
+        <center><img src="222.png" width="700" height="250"></center><br>
         <TABLE <TD colspan=3></TD>
 </body>
 
